examples/test/testpolicy5513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5513
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key20: value36
      key7: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value42
          key36: value0
      podSelector:
        matchLabels:
          key8: value6
          key1: value24
